Wed Jul 27 07:08:01 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 * CGI
   - add NUT HTML interface to ease the access to the various CGI
     scripts (thanks to Dave Breiland for relanching that idea).
     This one has to be configured with --with-htmlpath and is
     installed by default by "make install-cgi".
   - upsstats.cgi: add a "treemode" parameter to allow upsc like
     data listing, and the RUNTIME variable to display smart
     battery.runtime
   - complete upsstats.html with the battery runtime and data
     tree links
 - bcmxcp: typo fixes (length instead of lenght, thanks to Bill Richter)

Fri Jul 22 08:20:08 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - newhidups: minor change in interface claiming to avoid message like
   "process <pid> (<name>) did not claim interface X before use" upon
   device reopening, and bump driver release to 0.24
 - dummy-ups: add the flags and string length for the user data parsed,
   and bump driver release to 0.02
 - added back the Powerware 5119 RM Cable Layout from Daniel Thompson

Thu Jul 21 14:02:08 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - add the missing LDFLAGS to gendb
 - add Belkin F6C1100-UNV to the driver.list (thanks to Dave Breiland)

Wed Jul 20 11:15:08 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - adapt newhidups to recognize units from Tripplite, Mustek and
   Unitek for development purpose

 - isbmex: fix various errors in formulas, add shutdown capability
   and bump driver release to 0.05

 (Ricardo Martinezgarza)

 * fentonups:
   - fix the ID string for Sysgration UPGUARDS Pro650 (Simon J. Rowe)
   - add INELT Monolith 1000LT (Yuri V. Kurenkov)

 - various fixes in the RedHat spec file

 (Thomas Jarosch)

Fri Jul  1 08:15:56 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - replaced the dummycons driver by the dummy-ups driver.
   While the former was only usable through a console, the later