@@ -1,3 +1,7 @@
+Mon Aug 01 13:51:08 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>
+
+ - newhidups: handle the status clearing for LB
+ 
 Wed Jul 27 07:08:01 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>
 
  * CGI
